fix: the upload file button no longer disabled;
